products/tutorputor/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tutorputor
  labels:
    name: tutorputor
    environment: production
